--- a/style.css
+++ b/style.css
@@ -44,13 +44,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-body {
-  font-family: "Open Sans";
-  font-size: 15px;
-  line-height: 1.4; }
-
 h1 {
-  font-size: 3.33em;
+  font-size: 3.33rem;
   font-weight: 700;
   line-height: 1.3;
   color: #212121;
@@ -58,17 +53,82 @@ h1 {
   padding: 1rem 0; }
 
 h2 {
-  font-size: 2.667rem;
+  font-size: 2.66rem;
   font-weight: 600;
   line-height: 1.375;
   color: #212121;
   text-align: center;
   padding: 1rem 0; }
 
+h3 {
+  font-size: 2.33rem;
+  font-weight: 600;
+  line-height: 1.285;
+  color: #4A4A4A;
+  text-align: center;
+  padding: 0.5rem 0; }
+
+h4 {
+  font-size: 1.66rem;
+  font-weight: 600;
+  line-height: 1.4;
+  color: #4A4A4A;
+  text-align: center;
+  padding: 0.5rem 0; }
+
+h5 {
+  font-size: 1.33rem;
+  font-weight: 600;
+  line-height: 1.4;
+  color: #424242;
+  padding: 0.5rem 0; }
+
+p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.66;
+  color: #4A4A4A;
+  padding: 0.5rem 0; }
+
 nav {
-  background: #424242; }
+  color: #fff; }
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  line-height: 1.4; }
+
+ul {
+  list-style: disc;
+  padding-left: 1.5rem; }
+
+/* Grid */
+div {
+  max-width: 62.667rem;
+  margin: 0 auto; }
+
+nav {
+  background: #424242;
+  padding: 0.667rem 0; }
   nav p {
     color: #fff;
     text-align: center; }
+
+.hero {
+  background: pink; }
+  .hero h1 {
+    width: 45rem;
+    margin: 1rem auto 0; }
+  .hero h4 {
+    margin: 0 auto 1rem; }
+  .hero .video-small, .hero .first-optin {
+    max-width: 40%;
+    display: inline-block;
+    background: lightblue;
+    margin: 1rem 3%; }
+  .hero .video {
+    background: red;
+    height: 10rem;
+    width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
