--- a/style.sass
+++ b/style.sass
@@ -1,55 +1,47 @@
 //Imports
 @import reset
-    
-// colors
-$dark-gray:     #424242
+@import typo
+@import colors
 
-$red:           #EF4836
-$dark-red:      #D0021B
-
-$dark-blue:     #34495E
-$blue:          #2980B9
-$light-blue:    #E6FBFF
-
-//Text
-$text-dark:     #212121
-$text:          #4A4A4A
-
-//Navbar
+//General
 body
     font:
-        family: 'Open Sans'
+        family: 'Open Sans', sans-serif
         size: 15px
     line-height: 1.4
-//
-h1
-    font:
-        size: 3.33em
-        weight: 700
-    line-height: 1.3
-    color: $text-dark
-    text-align: center
-    padding: 1rem 0
-h2
-    font:
-        size: 2.667rem
-        weight: 600
-    line-height: 1.375
-    color: $text-dark
-    text-align: center
-    padding: 1rem 0
-//h3
-h4
-h5
-p
-nav
-
+ul
+    list-style: disc
+    padding-left: 1.5rem
+/* Grid 
+div
+    max-width: 62.667rem
+    margin: 0 auto
+    
+// Navbar
 nav 
     background: $dark-gray
+    padding: 0.667rem 0
     
     p
         color: #fff
         text-align: center
-        
-    
-    
+
+//Main 
+
+//Hero
+.hero
+    background: pink
+    h1
+        width: 45rem
+        margin: 1rem auto 0
+    h4
+        margin: 0 auto 1rem
+    .video-small, .first-optin
+        max-width: 40%
+        display: inline-block
+        background: lightblue
+        margin: 1rem 3%
+    .video
+        background: red
+        height: 10rem
+        width: 100%
